fix layout of reservation on small screens

--- a/assets/css/templatemo-klassy-cafe.css
+++ b/assets/css/templatemo-klassy-cafe.css
@@ -581,7 +581,7 @@ header
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .header-area .main-nav .logo {
     color: #1e1e1e;
   }
@@ -683,11 +683,11 @@ header
   }
 }
 
-@media (min-width: 767px) {
+/* @media (min-width: 767px) {
   .header-area .main-nav .nav {
     display: flex !important;
   }
-}
+} */
 
 
 /* 
@@ -1321,7 +1321,7 @@ reservation
 
 #reservation .phone span a,
 #reservation .clock span a {
-  font-size: 14px;
+  font-size: 20px;
   color: #2a2a2a;
   transition: all .3s;
 }
@@ -1341,6 +1341,39 @@ reservation
   flex-wrap: nowrap;
   justify-content: space-between;
   
+}
+#reservation .boxes{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height:500px;
+}
+
+@media screen and (max-width:992px){
+  #reservation .no-wrap{
+    flex-direction: column;
+  }
+  #reservation .if-holder{
+    width: 100%;
+    height: 450px;
+  }
+  #reservation .boxes{
+    margin-top:50px;
+    height: 100%;
+  }
+  #reservation .column{
+    width: 100%;
+  }
+  #reservation .phone{
+    margin-bottom: 0;
+  }
+}
+  
+
+
+
+.boxes span{
+  font-size: 20px;
 }
 #contact {
   margin-left: 30px;
